WIP outlier analysis and removal

--- a/bikes/01_data.ipynb
+++ b/bikes/01_data.ipynb
@@ -11,6 +11,7 @@
                 "import matplotlib.pyplot as plt\n",
                 "from matplotlib import cm\n",
                 "import seaborn as sns\n",
+                "from scipy.stats import norm\n",
                 "\n",
                 "from tqdm import tqdm"
             ]
@@ -95,6 +96,7 @@
                 "    \"Ti Rakau\",\n",
                 "    \"Ti Rakau Reserve\",\n",
                 "    \"Ti Rakau Riverhills\",\n",
+                "    \"TeWero Bridge\",\n",
                 "]"
             ]
         },
@@ -108,8 +110,7 @@
                 "    df = pd.read_excel(url, **read_excel_kwargs)\n",
                 "    df = df.rename(columns={\"Date\": \"date\", \"Date.1\": \"date\", \"Time\": \"date\"})\n",
                 "    df = df.melt(id_vars=\"date\", var_name=\"location\", value_name=\"count\")\n",
-                "    df[\"count\"] = df[\"count\"].fillna(value=0)\n",
-                "    df = df.astype({\"date\": \"datetime64[ns]\", \"location\": str, \"count\": int})\n",
+                "    df = df.astype({\"date\": \"datetime64[ns]\", \"location\": str, \"count\": float})\n",
                 "    return df\n",
                 "\n",
                 "\n",
@@ -158,15 +159,16 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "i = 7\n",
+                "i = 0\n",
                 "locs = sorted(cycle_counts[\"location\"].unique())[i * 10:  (i + 1) * 10]\n",
+                "print(locs)\n",
                 "\n",
                 "fig, ax = plt.subplots(len(locs), 1, figsize=(10, len(locs) * 1.75), sharex=True)\n",
                 "for i, loc in enumerate(locs):\n",
-                "    location_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
+                "    outlier_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
                 "    ax[i].plot(\n",
-                "        location_df[\"date\"].values,\n",
-                "        location_df[\"count\"].values,\n",
+                "        outlier_df[\"date\"].values,\n",
+                "        outlier_df[\"count\"].values,\n",
                 "        label=loc\n",
                 "    )\n",
                 "    ax[i].legend()\n",
@@ -185,16 +187,78 @@
                 "outlier_locs = [\n",
                 "    \"Albany Highway\",\n",
                 "    \"Archibald Park\",\n",
-                "    \"GI TO TAMAKI DR SECTION-1\",\n",
+                "    \"GI to Tamaki Drive Section-1\",\n",
                 "    \"Lake Road\",\n",
                 "    \"Mangere Safe Routes\",\n",
                 "    \"NW Cycleway TeAtatu\",\n",
-                "    \"SH20A\",\n",
                 "    \"Sandringham Road\",\n",
-                "    \"Ti Rakau Reserve\",\n",
-                "    \"TeWero Bridge\",\n",
-                "    \"Upper Harbour\",\n",
+                "    \"SH20A\",\n",
+                "    \"SW SH20\",\n",
+                "]"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "def get_outlier_df(location_df: pd.DataFrame, n_sigma: float = 3.0) -> pd.DataFrame:\n",
+                "    outlier_df = location_df.copy()\n",
+                "\n",
+                "    # Compute mean and std by weekday\n",
+                "    outlier_df = outlier_df.assign(weekday=outlier_df[\"date\"].dt.weekday)\n",
+                "    weekday_stats = (\n",
+                "        outlier_df\n",
+                "        .groupby(\"weekday\")[[\"count\"]]\n",
+                "        .agg([\"mean\", \"std\"])\n",
+                "        .droplevel(level=0, axis=1)\n",
+                "        .reset_index()\n",
+                "    )\n",
+                "    outlier_df = outlier_df.merge(weekday_stats, how=\"left\", on=\"weekday\")\n",
                 "    \n",
+                "    # Define upper and lower bounds\n",
+                "    outlier_df = outlier_df.assign(\n",
+                "        upper=outlier_df[\"mean\"] + n_sigma * outlier_df[\"std\"],\n",
+                "        lower=outlier_df[\"mean\"] - n_sigma * outlier_df[\"std\"],\n",
+                "    )\n",
+                "    is_outlier = (outlier_df[\"count\"] > outlier_df[\"upper\"]) | (outlier_df[\"count\"] < outlier_df[\"lower\"])\n",
+                "    outlier_df = outlier_df.assign(is_outlier=is_outlier)\n",
+                "    \n",
+                "    return outlier_df"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "loc = outlier_locs[9]\n",
+                "location_df = cycle_counts[cycle_counts[\"location\"] == loc]\n",
+                "\n",
+                "n_sigma = 3.0\n",
+                "n_expected = len(location_df) * 2 * norm().cdf(-n_sigma)\n",
+                "\n",
+                "outlier_df = get_outlier_df(location_df, n_sigma=n_sigma)\n",
+                "outlier_df = outlier_df.sort_values(\"date\")\n",
+                "fig, ax = plt.subplots(figsize=(10, 3.5))\n",
+                "ax.plot(outlier_df[\"date\"].values, outlier_df[\"count\"].values)\n",
+                "ax.plot(outlier_df[\"date\"].values, outlier_df[\"upper\"].values, ls=\"--\")\n",
+                "ax.plot(outlier_df[\"date\"].values, outlier_df[\"lower\"].values, ls=\"--\")\n",
+                "ax.set(title=loc)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Adjust level\n",
+                "locs = [\n",
+                "    \"Great South Road\",\n",
+                "    \"Karangahape Road\",\n",
                 "]"
             ]
         },
@@ -270,9 +334,9 @@
                 "\n",
                 "locations = cycle_counts[\"location\"].unique()\n",
                 "for location in locations:\n",
-                "    location_df = cycle_counts[cycle_counts[\"location\"] == location]\n",
-                "    ax[0].plot(location_df[\"date\"], location_df[\"count\"], color=\"gray\", alpha=0.5)\n",
-                "    ax[1].plot(location_df[\"date\"], np.log1p(location_df[\"count\"]), color=\"gray\", alpha=0.5)\n",
+                "    outlier_df = cycle_counts[cycle_counts[\"location\"] == location]\n",
+                "    ax[0].plot(outlier_df[\"date\"], outlier_df[\"count\"], color=\"gray\", alpha=0.5)\n",
+                "    ax[1].plot(outlier_df[\"date\"], np.log1p(outlier_df[\"count\"]), color=\"gray\", alpha=0.5)\n",
                 "\n",
                 "ax[0].plot(av_daily_counts[\"date\"], av_daily_counts[\"count\"], color=\"blue\", linewidth=2)\n",
                 "ax[1].plot(av_daily_counts[\"date\"], np.log1p(av_daily_counts[\"count\"]), color=\"blue\", linewidth=2)\n",
@@ -330,10 +394,10 @@
                 "locations = high_demand_locs[\"location\"].values\n",
                 "colors = cm.coolwarm(np.linspace(0, 1, len(locations)))\n",
                 "for i, location in enumerate(locations):\n",
-                "    location_df = cycle_counts[cycle_counts[\"location\"] == location]\n",
+                "    outlier_df = cycle_counts[cycle_counts[\"location\"] == location]\n",
                 "    ax.plot(\n",
-                "        location_df[\"date\"],\n",
-                "        location_df[\"count\"],\n",
+                "        outlier_df[\"date\"],\n",
+                "        outlier_df[\"count\"],\n",
                 "        label=location,\n",
                 "        color=colors[i],\n",
                 "        lw=2.5,\n",
@@ -367,13 +431,6 @@
                 "\n",
                 "ax.set(xlabel=\"\", ylabel=\"\");"
             ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": []
         }
     ],
     "metadata": {
