Outlier detection and removal

--- a/bikes/01_data.ipynb
+++ b/bikes/01_data.ipynb
@@ -6,12 +6,13 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "import pandas as pd\n",
-                "import numpy as np\n",
+                "from datetime import datetime\n",
+                "\n",
                 "import matplotlib.pyplot as plt\n",
                 "from matplotlib import cm\n",
+                "import numpy as np\n",
+                "import pandas as pd\n",
                 "import seaborn as sns\n",
-                "from scipy.stats import norm\n",
                 "\n",
                 "from tqdm import tqdm"
             ]
@@ -20,7 +21,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "# Data Loading"
+                "### Data Loading"
             ]
         },
         {
@@ -114,6 +115,11 @@
                 "    return df\n",
                 "\n",
                 "\n",
+                "def drop_locations(df: pd.DataFrame) -> pd.DataFrame:\n",
+                "    to_drop = df[\"location\"].isin(LOCATIONS_TO_DROP)\n",
+                "    return df.loc[~to_drop]\n",
+                "\n",
+                "\n",
                 "def map_locations(location: str) -> str:\n",
                 "    return LOCATION_MAPPING.get(location, location)\n",
                 "\n",
@@ -124,12 +130,7 @@
                 "    df[\"location\"] = df[\"location\"].str.replace(r\"\\bRd\\b\", \"Road\", regex=True)\n",
                 "    df[\"location\"] = df[\"location\"].str.replace(r\"\\bSt\\b\", \"Street\", regex=True)\n",
                 "    df[\"location\"] = df[\"location\"].apply(map_locations)\n",
-                "    return df\n",
-                "\n",
-                "\n",
-                "def drop_locations(df: pd.DataFrame) -> pd.DataFrame:\n",
-                "    to_drop = df[\"location\"].isin(LOCATIONS_TO_DROP)\n",
-                "    return df.loc[~to_drop].copy()"
+                "    return df"
             ]
         },
         {
@@ -154,27 +155,10 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
+            "cell_type": "markdown",
             "metadata": {},
-            "outputs": [],
             "source": [
-                "i = 0\n",
-                "locs = sorted(cycle_counts[\"location\"].unique())[i * 10:  (i + 1) * 10]\n",
-                "print(locs)\n",
-                "\n",
-                "fig, ax = plt.subplots(len(locs), 1, figsize=(10, len(locs) * 1.75), sharex=True)\n",
-                "for i, loc in enumerate(locs):\n",
-                "    outlier_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
-                "    ax[i].plot(\n",
-                "        outlier_df[\"date\"].values,\n",
-                "        outlier_df[\"count\"].values,\n",
-                "        label=loc\n",
-                "    )\n",
-                "    ax[i].legend()\n",
-                "    # ax[i].set_ylim(0, 500)\n",
-                "\n",
-                "fig.tight_layout();"
+                "### Outlier detection and removal"
             ]
         },
         {
@@ -225,7 +209,19 @@
                 "    is_outlier = (outlier_df[\"count\"] > outlier_df[\"upper\"]) | (outlier_df[\"count\"] < outlier_df[\"lower\"])\n",
                 "    outlier_df = outlier_df.assign(is_outlier=is_outlier)\n",
                 "    \n",
-                "    return outlier_df"
+                "    return outlier_df\n",
+                "\n",
+                "\n",
+                "def drop_outliers(\n",
+                "    cycle_counts: pd.DataFrame,\n",
+                "    outlier_dates_and_locs: list[tuple[datetime, str]],\n",
+                "):\n",
+                "    # Construct filter\n",
+                "    to_drop = pd.Series(np.full((len(cycle_counts), ), False), index=cycle_counts.index)\n",
+                "    for date, loc in outlier_dates_and_locs:\n",
+                "        to_drop |= ((cycle_counts[\"date\"] == date) & (cycle_counts[\"location\"] == loc))\n",
+                "    \n",
+                "    return cycle_counts.loc[~to_drop]"
             ]
         },
         {
@@ -234,19 +230,94 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "loc = outlier_locs[9]\n",
+                "loc = outlier_locs[8]\n",
                 "location_df = cycle_counts[cycle_counts[\"location\"] == loc]\n",
                 "\n",
                 "n_sigma = 3.0\n",
-                "n_expected = len(location_df) * 2 * norm().cdf(-n_sigma)\n",
-                "\n",
                 "outlier_df = get_outlier_df(location_df, n_sigma=n_sigma)\n",
                 "outlier_df = outlier_df.sort_values(\"date\")\n",
+                "\n",
                 "fig, ax = plt.subplots(figsize=(10, 3.5))\n",
                 "ax.plot(outlier_df[\"date\"].values, outlier_df[\"count\"].values)\n",
                 "ax.plot(outlier_df[\"date\"].values, outlier_df[\"upper\"].values, ls=\"--\")\n",
                 "ax.plot(outlier_df[\"date\"].values, outlier_df[\"lower\"].values, ls=\"--\")\n",
                 "ax.set(title=loc)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "outlier_dates_and_locations = [\n",
+                "    (datetime(2024, 10, 12), \"Albany Highway\"),\n",
+                "    (datetime(2024, 10, 21), \"Albany Highway\"),\n",
+                "    \n",
+                "    (datetime(2023, 4, 12), \"Archibald Park\"),\n",
+                "    (datetime(2024, 3, 1), \"Archibald Park\"),\n",
+                "    (datetime(2024, 3, 9), \"Archibald Park\"),\n",
+                "    (datetime(2024, 9, 28), \"Archibald Park\"),\n",
+                "    \n",
+                "    (datetime(2022, 5, 28), \"GI to Tamaki Drive Section-1\"),\n",
+                "    (datetime(2022, 6, 4), \"GI to Tamaki Drive Section-1\"),\n",
+                "    \n",
+                "    (datetime(2024, 9, 2), \"Lake Road\"),\n",
+                "    \n",
+                "    (datetime(2022, 10, 15), \"Mangere Safe Routes\"),\n",
+                "    (datetime(2022, 12, 2), \"Mangere Safe Routes\"),\n",
+                "    (datetime(2024, 9, 24), \"Mangere Safe Routes\"),\n",
+                "    \n",
+                "    (datetime(2022, 5, 7), \"NW Cycleway TeAtatu\"),\n",
+                "    \n",
+                "    (datetime(2024, 2, 19), \"Sandringham Road\"),\n",
+                "    (datetime(2024, 2, 20), \"Sandringham Road\"),\n",
+                "    (datetime(2024, 2, 21), \"Sandringham Road\"),\n",
+                "    (datetime(2024, 2, 22), \"Sandringham Road\"),\n",
+                "    (datetime(2024, 2, 23), \"Sandringham Road\"),\n",
+                "\n",
+                "    (datetime(2022, 3, 2), \"SH20A\"),\n",
+                "    (datetime(2024, 2, 22), \"SH20A\"),\n",
+                "\n",
+                "    (datetime(2024, 2, 2), \"SW SH20\"),\n",
+                "    (datetime(2024, 2, 3), \"SW SH20\"),\n",
+                "    (datetime(2024, 3, 27), \"SW SH20\"),\n",
+                "    (datetime(2024, 4, 11), \"SW SH20\"),\n",
+                "    (datetime(2024, 4, 12), \"SW SH20\"),\n",
+                "    (datetime(2024, 4, 13), \"SW SH20\"),\n",
+                "]"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "cycle_counts = drop_outliers(cycle_counts, outlier_dates_and_locations)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "i = 14\n",
+                "locs = sorted(cycle_counts[\"location\"].unique())[i * 5:  (i + 1) * 5]\n",
+                "print(locs)\n",
+                "\n",
+                "fig, ax = plt.subplots(len(locs), 1, figsize=(10, len(locs) * 1.75), sharex=True)\n",
+                "for i, loc in enumerate(locs):\n",
+                "    outlier_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
+                "    ax[i].plot(\n",
+                "        outlier_df[\"date\"].values,\n",
+                "        outlier_df[\"count\"].values,\n",
+                "        label=loc\n",
+                "    )\n",
+                "    ax[i].legend()\n",
+                "\n",
+                "fig.tight_layout();"
             ]
         },
         {
