Change point detection and adjustment

--- a/bikes/01_data.ipynb
+++ b/bikes/01_data.ipynb
@@ -12,6 +12,7 @@
                 "from matplotlib import cm\n",
                 "import numpy as np\n",
                 "import pandas as pd\n",
+                "import ruptures as rpt\n",
                 "import seaborn as sns\n",
                 "\n",
                 "from tqdm import tqdm"
@@ -151,7 +152,43 @@
                 "\n",
                 "cycle_counts = pd.concat(dfs, axis=0, ignore_index=True)\n",
                 "cycle_counts = standardise_locations(cycle_counts)\n",
-                "cycle_counts = drop_locations(cycle_counts)"
+                "cycle_counts = drop_locations(cycle_counts)\n",
+                "cycle_counts = cycle_counts.drop_duplicates()"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "(\n",
+                "    cycle_counts\n",
+                "    .assign(is_na=cycle_counts[\"count\"].isna())\n",
+                "    .groupby(\"location\")\n",
+                "    [[\"is_na\"]]\n",
+                "    .sum()\n",
+                "    .sort_values(\"is_na\", ascending=False)\n",
+                "    .iloc[:10]\n",
+                ")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "cycle_counts.to_csv(\"raw_cycle_counts.csv\", index=False)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "cycle_counts = pd.read_csv(\"raw_cycle_counts.csv\", parse_dates=[\"date\"])"
             ]
         },
         {
@@ -303,18 +340,185 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "i = 14\n",
+                "cycle_counts.to_csv(\"cycle_counts_after_outliers.csv\", index=False)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### Changepoint detection and adjustment"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "def get_chpt_locations(location_df: pd.DataFrame, n_chpts: int):\n",
+                "    location_df = location_df.copy()\n",
+                "    location_df = location_df.sort_values(\"date\")\n",
+                "    \n",
+                "    model = rpt.Dynp(model=\"l2\").fit(np.array(location_df[\"count\"]))\n",
+                "    chpts_idx = model.predict(n_bkps=n_chpts)\n",
+                "    \n",
+                "    min_date, max_date = location_df[\"date\"].min(), location_df[\"date\"].max()\n",
+                "    chpts_dt = [location_df.iloc[idx][\"date\"].to_pydatetime() for idx in chpts_idx[:-1]]\n",
+                "    chpts_dt = [min_date.to_pydatetime()] + chpts_dt + [max_date.to_pydatetime()]\n",
+                "    \n",
+                "    return chpts_dt\n",
+                "\n",
+                "\n",
+                "def adjust_scale(\n",
+                "    cycle_counts: pd.DataFrame,\n",
+                "    chpts_by_location: dict[str, list[datetime]],\n",
+                "):\n",
+                "    for loc, chpts in chpts_by_location.items():\n",
+                "        loc_mask = cycle_counts[\"location\"] == loc\n",
+                "        \n",
+                "        # Find the longest streak, this is the anchor\n",
+                "        chpt_streaks = list(zip(chpts, chpts[1:]))\n",
+                "        streak_lengths = [\n",
+                "            (loc_mask & cycle_counts[\"date\"].between(start, end, inclusive=\"left\")).sum()\n",
+                "            for (start, end) in chpt_streaks\n",
+                "        ]\n",
+                "        longest_streak = chpt_streaks[streak_lengths.index(max(streak_lengths))]\n",
+                "\n",
+                "        # Calculate mean of longest streak\n",
+                "        ls_start, ls_end = longest_streak\n",
+                "        ls_mask = cycle_counts[\"date\"].between(ls_start, ls_end, inclusive=\"left\")\n",
+                "        ls_mean = cycle_counts[loc_mask & ls_mask][\"count\"].mean()\n",
+                "\n",
+                "        # Scale every streak using anchor stats\n",
+                "        for streak_start, streak_end in chpt_streaks:\n",
+                "            streak_mask = cycle_counts[\"date\"].between(streak_start, streak_end, inclusive=\"left\")\n",
+                "            streak_mean = cycle_counts[loc_mask & streak_mask][\"count\"].mean()\n",
+                "            loc_streak_counts = cycle_counts.loc[loc_mask & streak_mask, \"count\"]\n",
+                "            loc_streak_counts_adj = loc_streak_counts.div(streak_mean).mul(ls_mean)\n",
+                "            cycle_counts.loc[loc_mask & streak_mask, \"count\"] = loc_streak_counts_adj\n",
+                "    \n",
+                "    return cycle_counts"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "locations_and_n_chpts = [\n",
+                "    (\"Grafton Road\", 1),\n",
+                "    (\"Great South Road\", 2),\n",
+                "    (\"Karangahape Road\", 2),\n",
+                "    (\"Lightpath\", 1)\n",
+                "]"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "loc, n_chpts = locations_and_n_chpts[1]\n",
+                "location_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
+                "\n",
+                "chpts = get_chpt_locations(location_df, n_chpts)\n",
+                "\n",
+                "fig, ax = plt.subplots(figsize=(12, 2.5))\n",
+                "ax.plot(location_df[\"date\"].values, location_df[\"count\"].values)\n",
+                "for chpt in chpts:\n",
+                "    ax.axvline(chpt, color=\"red\")\n",
+                "ax.set(title=loc)\n",
+                "fig.tight_layout();"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "chpts_by_location = {}\n",
+                "for loc, n_chpts in locations_and_n_chpts:\n",
+                "    location_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
+                "    chpts = get_chpt_locations(location_df, n_chpts)\n",
+                "    chpts_by_location[loc] = chpts"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "chpts_by_location = {\n",
+                "    \"Grafton Road\": [\n",
+                "        datetime(2022, 1, 1),\n",
+                "        datetime(2023, 1, 16),\n",
+                "        datetime(2024, 12, 31),\n",
+                "    ],\n",
+                "    \"Great South Road\": [\n",
+                "        datetime(2022, 1, 1),\n",
+                "        datetime(2022, 8, 29),\n",
+                "        datetime(2023, 3, 2),\n",
+                "        datetime(2024, 12, 31)\n",
+                "    ],\n",
+                "    \"Karangahape Road\": [\n",
+                "        datetime(2022, 1, 1),\n",
+                "        datetime(2024, 4, 15),\n",
+                "        datetime(2024, 7, 19),\n",
+                "        datetime(2024, 12, 31)\n",
+                "    ],\n",
+                "    \"Lightpath\": [\n",
+                "        datetime(2022, 1, 1),\n",
+                "        datetime(2023, 2, 5),\n",
+                "        datetime(2024, 12, 31)\n",
+                "    ]\n",
+                "}"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "cycle_counts = adjust_scale(cycle_counts, chpts_by_location)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "loc, _ = locations_and_n_chpts[3]\n",
+                "location_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
+                "\n",
+                "fig, ax = plt.subplots(figsize=(12, 2.5))\n",
+                "ax.plot(location_df[\"date\"].values, location_df[\"count\"].values)\n",
+                "for chpt in chpts_by_location[loc]:\n",
+                "    ax.axvline(chpt, color=\"red\")\n",
+                "ax.set(title=loc)\n",
+                "fig.tight_layout();"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "i = 3\n",
                 "locs = sorted(cycle_counts[\"location\"].unique())[i * 5:  (i + 1) * 5]\n",
                 "print(locs)\n",
                 "\n",
                 "fig, ax = plt.subplots(len(locs), 1, figsize=(10, len(locs) * 1.75), sharex=True)\n",
                 "for i, loc in enumerate(locs):\n",
-                "    outlier_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
-                "    ax[i].plot(\n",
-                "        outlier_df[\"date\"].values,\n",
-                "        outlier_df[\"count\"].values,\n",
-                "        label=loc\n",
-                "    )\n",
+                "    location_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
+                "    ax[i].plot(location_df[\"date\"].values, location_df[\"count\"].values, label=loc)\n",
                 "    ax[i].legend()\n",
                 "\n",
                 "fig.tight_layout();"
@@ -326,11 +530,14 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "# Adjust level\n",
-                "locs = [\n",
-                "    \"Great South Road\",\n",
-                "    \"Karangahape Road\",\n",
-                "]"
+                "cycle_counts.to_csv(\"cycle_counts_after_scale_adjust.csv\", index=False)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {},
+            "source": [
+                "### Resample to daily freq"
             ]
         },
         {
@@ -339,7 +546,9 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "cycle_counts.to_csv(\"cycle_counts.csv\", index=False)"
+                "location_dfs = []\n",
+                "for loc, location_df in cycle_counts.groupby(\"location\"):\n",
+                "    break"
             ]
         },
         {
@@ -348,7 +557,16 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "cycle_counts = pd.read_csv(\"cycle_counts.csv\", parse_dates=[\"time\"])"
+                "location_df[location_df.duplicated(\"date\")]"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "location_df[location_df[\"date\"] == datetime(2024, 8, 31)]"
             ]
         },
         {
@@ -406,8 +624,8 @@
                 "locations = cycle_counts[\"location\"].unique()\n",
                 "for location in locations:\n",
                 "    outlier_df = cycle_counts[cycle_counts[\"location\"] == location]\n",
-                "    ax[0].plot(outlier_df[\"date\"], outlier_df[\"count\"], color=\"gray\", alpha=0.5)\n",
-                "    ax[1].plot(outlier_df[\"date\"], np.log1p(outlier_df[\"count\"]), color=\"gray\", alpha=0.5)\n",
+                "    ax[0].plot(outlier_df[\"date\"], outlier_df[\"count\"], color=\"gray\", alpha=0.25)\n",
+                "    ax[1].plot(outlier_df[\"date\"], np.log1p(outlier_df[\"count\"]), color=\"gray\", alpha=0.25)\n",
                 "\n",
                 "ax[0].plot(av_daily_counts[\"date\"], av_daily_counts[\"count\"], color=\"blue\", linewidth=2)\n",
                 "ax[1].plot(av_daily_counts[\"date\"], np.log1p(av_daily_counts[\"count\"]), color=\"blue\", linewidth=2)\n",
@@ -465,7 +683,7 @@
                 "locations = high_demand_locs[\"location\"].values\n",
                 "colors = cm.coolwarm(np.linspace(0, 1, len(locations)))\n",
                 "for i, location in enumerate(locations):\n",
-                "    outlier_df = cycle_counts[cycle_counts[\"location\"] == location]\n",
+                "    outlier_df = cycle_counts[cycle_counts[\"location\"] == location].sort_values(\"date\").iloc[-150:]\n",
                 "    ax.plot(\n",
                 "        outlier_df[\"date\"],\n",
                 "        outlier_df[\"count\"],\n",
@@ -485,7 +703,7 @@
             "source": [
                 "counts_pivot = cycle_counts.pivot_table(columns=\"date\", index=\"location\", values=\"count\", aggfunc=\"sum\")\n",
                 "counts_pivot = counts_pivot.fillna(0).assign(average=lambda x: x.mean(axis=1))\n",
-                "counts_pivot = counts_pivot[counts_pivot[\"average\"].between(100, 200)]\n",
+                "counts_pivot = counts_pivot[counts_pivot[\"average\"].between(400, 1000)]\n",
                 "counts_pivot = counts_pivot.sort_values(\"average\", ascending=False).drop(columns=\"average\")\n",
                 "\n",
                 "fig, ax = plt.subplots(1, 1)\n",
@@ -502,6 +720,13 @@
                 "\n",
                 "ax.set(xlabel=\"\", ylabel=\"\");"
             ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": []
         }
     ],
     "metadata": {
