--- a/bikes/01_data.ipynb
+++ b/bikes/01_data.ipynb
@@ -6,13 +6,22 @@
             "metadata": {},
             "outputs": [],
             "source": [
+                "%load_ext autoreload\n",
+                "%autoreload 2"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": [
                 "from datetime import datetime\n",
                 "\n",
                 "import matplotlib.pyplot as plt\n",
                 "from matplotlib import cm\n",
                 "import numpy as np\n",
                 "import pandas as pd\n",
-                "import ruptures as rpt\n",
                 "import seaborn as sns\n",
                 "\n",
                 "from bikes.data import load_cycle_counts"
@@ -22,24 +31,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "### Data Loading"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 2,
-            "metadata": {},
-            "outputs": [
-                {
-                    "name": "stderr",
-                    "output_type": "stream",
-                    "text": [
-                        "100%|██████████| 25/25 [01:18<00:00,  3.13s/it]\n"
-                    ]
-                }
-            ],
-            "source": [
-                "cycle_counts = load_cycle_counts()"
+                "## Data Loading"
             ]
         },
         {
@@ -48,7 +40,8 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "cycle_counts.to_csv(\"raw_cycle_counts.csv\", index=False)"
+                "cycle_counts = load_cycle_counts()\n",
+                "cycle_counts.to_csv(\"cycle_counts.csv\", index=False)"
             ]
         },
         {
@@ -57,14 +50,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "cycle_counts = pd.read_csv(\"raw_cycle_counts.csv\", parse_dates=[\"date\"])"
-            ]
-        },
-        {
-            "cell_type": "markdown",
-            "metadata": {},
-            "source": [
-                "### Changepoint detection and adjustment"
+                "cycle_counts = pd.read_csv(\"cycle_counts.csv\", parse_dates=[\"date\"])"
             ]
         },
         {
@@ -73,49 +59,16 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "def get_chpt_locations(location_df: pd.DataFrame, n_chpts: int):\n",
-                "    location_df = location_df.copy()\n",
-                "    location_df = location_df.sort_values(\"date\")\n",
-                "    \n",
-                "    model = rpt.Dynp(model=\"l2\").fit(np.array(location_df[\"count\"]))\n",
-                "    chpts_idx = model.predict(n_bkps=n_chpts)\n",
-                "    \n",
-                "    min_date, max_date = location_df[\"date\"].min(), location_df[\"date\"].max()\n",
-                "    chpts_dt = [location_df.iloc[idx][\"date\"].to_pydatetime() for idx in chpts_idx[:-1]]\n",
-                "    chpts_dt = [min_date.to_pydatetime()] + chpts_dt + [max_date.to_pydatetime()]\n",
-                "    \n",
-                "    return chpts_dt\n",
+                "from datetime import datetime\n",
                 "\n",
-                "\n",
-                "def adjust_scale(\n",
-                "    cycle_counts: pd.DataFrame,\n",
-                "    chpts_by_location: dict[str, list[datetime]],\n",
-                "):\n",
-                "    for loc, chpts in chpts_by_location.items():\n",
-                "        loc_mask = cycle_counts[\"location\"] == loc\n",
-                "        \n",
-                "        # Find the longest streak, this is the anchor\n",
-                "        chpt_streaks = list(zip(chpts, chpts[1:]))\n",
-                "        streak_lengths = [\n",
-                "            (loc_mask & cycle_counts[\"date\"].between(start, end, inclusive=\"left\")).sum()\n",
-                "            for (start, end) in chpt_streaks\n",
-                "        ]\n",
-                "        longest_streak = chpt_streaks[streak_lengths.index(max(streak_lengths))]\n",
-                "\n",
-                "        # Calculate mean of longest streak\n",
-                "        ls_start, ls_end = longest_streak\n",
-                "        ls_mask = cycle_counts[\"date\"].between(ls_start, ls_end, inclusive=\"left\")\n",
-                "        ls_mean = cycle_counts[loc_mask & ls_mask][\"count\"].mean()\n",
-                "\n",
-                "        # Scale every streak using anchor stats\n",
-                "        for streak_start, streak_end in chpt_streaks:\n",
-                "            streak_mask = cycle_counts[\"date\"].between(streak_start, streak_end, inclusive=\"left\")\n",
-                "            streak_mean = cycle_counts[loc_mask & streak_mask][\"count\"].mean()\n",
-                "            loc_streak_counts = cycle_counts.loc[loc_mask & streak_mask, \"count\"]\n",
-                "            loc_streak_counts_adj = loc_streak_counts.div(streak_mean).mul(ls_mean)\n",
-                "            cycle_counts.loc[loc_mask & streak_mask, \"count\"] = loc_streak_counts_adj\n",
-                "    \n",
-                "    return cycle_counts"
+                "from statsmodels.tsa.seasonal import MSTL\n",
+                "from bikes.utils.preprocess import Scaler\n",
+                "from bikes.models.ets import ExponentialSmoothingLearner\n",
+                "from bikes.models.sarima import SARIMASequenceLearner\n",
+                "from bikes.models.prophet import ProphetSequenceLearner\n",
+                "from bikes.models.theta import ThetaSequenceLearner\n",
+                "from bikes.models.prophet import ProphetSequenceLearner\n",
+                "from bikes.models.rnn import RNNSequenceLearner"
             ]
         },
         {
@@ -124,127 +77,42 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "i = 11\n",
-                "locs = sorted(cycle_counts[\"location\"].unique())[i * 5:  (i + 1) * 5]\n",
-                "print(locs)\n",
+                "i = 5\n",
+                "loc = sorted(cycle_counts[\"location\"].unique())[i]\n",
                 "\n",
-                "fig, ax = plt.subplots(len(locs), 1, figsize=(10, len(locs) * 1.75), sharex=True)\n",
-                "for i, loc in enumerate(locs):\n",
-                "    location_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
-                "    ax[i].plot(location_df[\"date\"].values, (location_df[\"count\"].values), label=loc)\n",
-                "    ax[i].legend()\n",
+                "location_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\").set_index(\"date\")\n",
+                "y_train = location_df.loc[:datetime(2024, 10, 31), \"count\"]\n",
                 "\n",
-                "fig.tight_layout();"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "locations_and_n_chpts = [\n",
-                "    (\"East Coast Road\", 1),\n",
-                "    (\"Grafton Road\", 1),\n",
-                "    (\"Great South Road\", 2),\n",
-                "    (\"Karangahape Road\", 2),\n",
-                "    (\"Lightpath\", 1)\n",
-                "]"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "loc, n_chpts = locations_and_n_chpts[0]\n",
-                "location_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
+                "horizon = 61\n",
                 "\n",
-                "chpts = get_chpt_locations(location_df, n_chpts)\n",
+                "print(\"Fitting ETS model....\\n\")\n",
+                "ets = ExponentialSmoothingLearner(horizon=horizon, seasonal=\"add\", seasonal_periods=7, freq=\"D\")\n",
+                "ets.fit(y_train)\n",
+                "y_hat_ets = ets.predict()\n",
                 "\n",
-                "fig, ax = plt.subplots(figsize=(12, 2.5))\n",
-                "ax.plot(location_df[\"date\"].values, location_df[\"count\"].values)\n",
-                "for chpt in chpts:\n",
-                "    ax.axvline(chpt, color=\"red\")\n",
-                "ax.set(title=loc)\n",
-                "fig.tight_layout();"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "chpts_by_location = {}\n",
-                "for loc, n_chpts in locations_and_n_chpts:\n",
-                "    location_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
-                "    chpts = get_chpt_locations(location_df, n_chpts)\n",
-                "    chpts_by_location[loc] = chpts"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "chpts_by_location = {\n",
-                "    \"East Coast Road\": [\n",
-                "        datetime(2022, 1, 1),\n",
-                "        datetime(2022, 11, 22),\n",
-                "        datetime(2024, 12, 31),\n",
-                "    ],\n",
-                "    \"Grafton Road\": [\n",
-                "        datetime(2022, 1, 1),\n",
-                "        datetime(2023, 1, 16),\n",
-                "        datetime(2024, 12, 31),\n",
-                "    ],\n",
-                "    \"Great South Road\": [\n",
-                "        datetime(2022, 1, 1),\n",
-                "        datetime(2022, 8, 29),\n",
-                "        datetime(2023, 3, 2),\n",
-                "        datetime(2024, 12, 31)\n",
-                "    ],\n",
-                "    \"Karangahape Road\": [\n",
-                "        datetime(2022, 1, 1),\n",
-                "        datetime(2024, 4, 15),\n",
-                "        datetime(2024, 7, 19),\n",
-                "        datetime(2024, 12, 31)\n",
-                "    ],\n",
-                "    \"Lightpath\": [\n",
-                "        datetime(2022, 1, 1),\n",
-                "        datetime(2023, 2, 5),\n",
-                "        datetime(2024, 12, 31)\n",
-                "    ]\n",
-                "}"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "cycle_counts = adjust_scale(cycle_counts, chpts_by_location)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "loc, _ = locations_and_n_chpts[5]\n",
-                "location_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\")\n",
+                "print(\"Fitting SARIMA model....\\n\")\n",
+                "sarima = SARIMASequenceLearner(horizon=horizon, order=(1, 0, 2), seasonal_order=(0, 1, 1, 7), freq=\"D\")\n",
+                "sarima.fit(y_train)\n",
+                "y_hat_sarima = sarima.predict()\n",
                 "\n",
-                "fig, ax = plt.subplots(figsize=(12, 2.5))\n",
-                "ax.plot(location_df[\"date\"].values, location_df[\"count\"].values)\n",
-                "for chpt in chpts_by_location[loc]:\n",
-                "    ax.axvline(chpt, color=\"red\")\n",
-                "ax.set(title=loc)\n",
-                "fig.tight_layout();"
+                "print(\"Fitting Theta model....\\n\")\n",
+                "theta = ThetaSequenceLearner(horizon=horizon)\n",
+                "theta.fit(y_train)\n",
+                "y_hat_theta = theta.predict()\n",
+                "\n",
+                "print(\"Fitting Prophet model....\\n\")\n",
+                "prophet = ProphetSequenceLearner(horizon=horizon, growth=\"linear\", changepoint_prior_scale=0.05, yearly_seasonality='auto', weekly_seasonality=3)\n",
+                "prophet.fit(y_train)\n",
+                "y_hat_prophet = prophet.predict()\n",
+                "\n",
+                "print(\"Fitting RNN model....\\n\")\n",
+                "scaler = Scaler()\n",
+                "y_train_scaled = scaler.fit_transform(y_train)\n",
+                "\n",
+                "model = RNNSequenceLearner(horizon=horizon, input_size=1, hidden_size=25)\n",
+                "model.fit(y_train_scaled)\n",
+                "y_hat_rnn = model.predict(y_train_scaled)\n",
+                "y_hat_rnn = pd.Series(scaler.inverse_transform(y_hat_rnn.values), index=y_hat_rnn.index)"
             ]
         },
         {
@@ -253,7 +121,26 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "cycle_counts.to_csv(\"cycle_counts_after_scale_adjust.csv\", index=False)"
+                "fig, ax = plt.subplots(1, 1, sharex=True, figsize=(12, 2.5))\n",
+                "ax.scatter(\n",
+                "    location_df.index.values[-100:],\n",
+                "    location_df[\"count\"].values[-100:],\n",
+                "    color=\"black\",\n",
+                "    s=15,\n",
+                ")\n",
+                "for name, y_hat in [\n",
+                "    (\"ets\", y_hat_ets),\n",
+                "    (\"sarima\", y_hat_sarima),\n",
+                "    (\"theta\", y_hat_theta),\n",
+                "    (\"prophet\", y_hat_prophet),\n",
+                "    (\"rnn\", y_hat_rnn),\n",
+                "]:\n",
+                "    ax.plot(\n",
+                "        y_hat.index.values,\n",
+                "        y_hat.values,\n",
+                "        label=name,\n",
+                "    )\n",
+                "ax.legend()"
             ]
         },
         {
@@ -354,7 +241,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "threshold = 600\n",
+                "threshold = 100\n",
                 "high_demand_locs = av_daily_counts_by_loc[av_daily_counts_by_loc[\"count\"] > threshold]\n",
                 "high_demand_locs.sort_values(\"count\")"
             ]
@@ -390,7 +277,7 @@
             "source": [
                 "counts_pivot = cycle_counts.pivot_table(columns=\"date\", index=\"location\", values=\"count\", aggfunc=\"sum\")\n",
                 "counts_pivot = counts_pivot.fillna(0).assign(average=lambda x: x.mean(axis=1))\n",
-                "counts_pivot = counts_pivot[counts_pivot[\"average\"].between(400, 1000)]\n",
+                "counts_pivot = counts_pivot[counts_pivot[\"average\"].between(0, 100)]\n",
                 "counts_pivot = counts_pivot.sort_values(\"average\", ascending=False).drop(columns=\"average\")\n",
                 "\n",
                 "fig, ax = plt.subplots(1, 1)\n",
