WIP on notebooks

--- a/bikes/03_sarimax.ipynb
+++ b/bikes/03_sarimax.ipynb
@@ -334,7 +334,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bikes",
    "language": "python",
    "name": "python3"
   },
