--- a/bikes/05_rnns.ipynb
+++ b/bikes/05_rnns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8e46c805",
    "metadata": {},
    "outputs": [],
@@ -24,6 +24,56 @@
    "metadata": {},
    "source": [
     "# RNNs & LSTMs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "0f511538",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_size = 1\n",
+    "hidden_size = 10\n",
+    "\n",
+    "model = nn.RNN(\n",
+    "    input_size=input_size,\n",
+    "    hidden_size=hidden_size,\n",
+    "    batch_first=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "99807284",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 32\n",
+    "seq_length = 15\n",
+    "input = torch.randn(size=(batch_size, seq_length, input_size))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "11310b3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function Tensor.size>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(input @ model.weight_ih_l0.T).size"
    ]
   },
   {
@@ -823,7 +873,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bikes",
    "language": "python",
    "name": "python3"
   },
