--- a/bikes/01_data.ipynb
+++ b/bikes/01_data.ipynb
@@ -305,7 +305,7 @@
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": ".venv",
+            "display_name": "bikes",
             "language": "python",
             "name": "python3"
         },
