--- a/bikes/02_exp_smoothing.ipynb
+++ b/bikes/02_exp_smoothing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bikes",
    "language": "python",
    "name": "python3"
   },
