--- a/bikes/06_deepar.ipynb
+++ b/bikes/06_deepar.ipynb
@@ -672,7 +672,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "bikes",
    "language": "python",
    "name": "python3"
   },
