--- a/bikes/01_data.ipynb
+++ b/bikes/01_data.ipynb
@@ -54,96 +54,6 @@
             ]
         },
         {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "from datetime import datetime\n",
-                "\n",
-                "from statsmodels.tsa.seasonal import MSTL\n",
-                "from bikes.utils.preprocess import Scaler\n",
-                "from bikes.models.ets import ExponentialSmoothingLearner\n",
-                "from bikes.models.sarima import SARIMASequenceLearner\n",
-                "from bikes.models.prophet import ProphetSequenceLearner\n",
-                "from bikes.models.theta import ThetaSequenceLearner\n",
-                "from bikes.models.prophet import ProphetSequenceLearner\n",
-                "from bikes.models.rnn import RNNSequenceLearner"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "i = 5\n",
-                "loc = sorted(cycle_counts[\"location\"].unique())[i]\n",
-                "\n",
-                "location_df = cycle_counts[cycle_counts[\"location\"] == loc].sort_values(\"date\").set_index(\"date\")\n",
-                "y_train = location_df.loc[:datetime(2024, 10, 31), \"count\"]\n",
-                "\n",
-                "horizon = 61\n",
-                "\n",
-                "print(\"Fitting ETS model....\\n\")\n",
-                "ets = ExponentialSmoothingLearner(horizon=horizon, seasonal=\"add\", seasonal_periods=7, freq=\"D\")\n",
-                "ets.fit(y_train)\n",
-                "y_hat_ets = ets.predict()\n",
-                "\n",
-                "print(\"Fitting SARIMA model....\\n\")\n",
-                "sarima = SARIMASequenceLearner(horizon=horizon, order=(1, 0, 2), seasonal_order=(0, 1, 1, 7), freq=\"D\")\n",
-                "sarima.fit(y_train)\n",
-                "y_hat_sarima = sarima.predict()\n",
-                "\n",
-                "print(\"Fitting Theta model....\\n\")\n",
-                "theta = ThetaSequenceLearner(horizon=horizon)\n",
-                "theta.fit(y_train)\n",
-                "y_hat_theta = theta.predict()\n",
-                "\n",
-                "print(\"Fitting Prophet model....\\n\")\n",
-                "prophet = ProphetSequenceLearner(horizon=horizon, growth=\"linear\", changepoint_prior_scale=0.05, yearly_seasonality='auto', weekly_seasonality=3)\n",
-                "prophet.fit(y_train)\n",
-                "y_hat_prophet = prophet.predict()\n",
-                "\n",
-                "print(\"Fitting RNN model....\\n\")\n",
-                "scaler = Scaler()\n",
-                "y_train_scaled = scaler.fit_transform(y_train)\n",
-                "\n",
-                "model = RNNSequenceLearner(horizon=horizon, input_size=1, hidden_size=25)\n",
-                "model.fit(y_train_scaled)\n",
-                "y_hat_rnn = model.predict(y_train_scaled)\n",
-                "y_hat_rnn = pd.Series(scaler.inverse_transform(y_hat_rnn.values), index=y_hat_rnn.index)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": [
-                "fig, ax = plt.subplots(1, 1, sharex=True, figsize=(12, 2.5))\n",
-                "ax.scatter(\n",
-                "    location_df.index.values[-100:],\n",
-                "    location_df[\"count\"].values[-100:],\n",
-                "    color=\"black\",\n",
-                "    s=15,\n",
-                ")\n",
-                "for name, y_hat in [\n",
-                "    (\"ets\", y_hat_ets),\n",
-                "    (\"sarima\", y_hat_sarima),\n",
-                "    (\"theta\", y_hat_theta),\n",
-                "    (\"prophet\", y_hat_prophet),\n",
-                "    (\"rnn\", y_hat_rnn),\n",
-                "]:\n",
-                "    ax.plot(\n",
-                "        y_hat.index.values,\n",
-                "        y_hat.values,\n",
-                "        label=name,\n",
-                "    )\n",
-                "ax.legend()"
-            ]
-        },
-        {
             "cell_type": "markdown",
             "metadata": {},
             "source": [
@@ -241,7 +151,7 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "threshold = 100\n",
+                "threshold = 250\n",
                 "high_demand_locs = av_daily_counts_by_loc[av_daily_counts_by_loc[\"count\"] > threshold]\n",
                 "high_demand_locs.sort_values(\"count\")"
             ]
@@ -257,7 +167,7 @@
                 "locations = high_demand_locs[\"location\"].values\n",
                 "colors = cm.coolwarm(np.linspace(0, 1, len(locations)))\n",
                 "for i, location in enumerate(locations):\n",
-                "    outlier_df = cycle_counts[cycle_counts[\"location\"] == location].sort_values(\"date\").iloc[-150:]\n",
+                "    outlier_df = cycle_counts[cycle_counts[\"location\"] == location].sort_values(\"date\").iloc[-500:]\n",
                 "    ax.plot(\n",
                 "        outlier_df[\"date\"],\n",
                 "        outlier_df[\"count\"],\n",
@@ -294,18 +204,11 @@
                 "\n",
                 "ax.set(xlabel=\"\", ylabel=\"\");"
             ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": null,
-            "metadata": {},
-            "outputs": [],
-            "source": []
         }
     ],
     "metadata": {
         "kernelspec": {
-            "display_name": "bikes",
+            "display_name": ".venv",
             "language": "python",
             "name": "python3"
         },
